Test change in notebook

--- a/notebooks/PracticalHaskell.ipynb
+++ b/notebooks/PracticalHaskell.ipynb
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "-- load styles & scripts to pimp the notebook.\n",
+    "-- Make sure you run the next 4 cells!... load styles & scripts to pimp the notebook.\n",
     "import qualified IHaskell.Display as ID\n",
     "ID.Display [\n",
     "    ID.html \"<link href=\\\"https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css\\\" rel=\\\"stylesheet\\\">\"\n",
